[package]
name = "unstuck"
version = "0.0.0"
authors = ["John Wass <jwass3@gmail.com>"]
edition = "2018"

[dependencies]
kube = "0.57.0"
kube-runtime = "0.57.0"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_18"] }
hyper = "0.14"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[[bin]]
name = "unstuck"
path = "src/bin/main.rs"
